# ecommerceAnalytics

./: .env  README.md  data_audit.db  main.py  pyproject.toml
app/: main.py
app/api/: analytics.py
app/models/: __init__.py  base.py  customer.py  order.py  order_item.py  payment.py  product.py
app/seed/: seed_data.py
app/services/: analytics_service.py
